--- a/MyQR/src/app/tab1/tab1.page.html
+++ b/MyQR/src/app/tab1/tab1.page.html
@@ -1,23 +1,18 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Bloggy
+      Main Page
+      <ion-button (click) = "logout()" > Logout</ion-button>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-card class="welcome-card">
-      <img *ngFor="let img of images, let i = index" src="{{img.url}}" alt="" />
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title >Welcome! {{ uname }} </ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p></p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
+        <ion-list lines="none">
+            <ion-button expand ="block"  (click) = "openScanner()"> Read QR</ion-button>
+            <ion-button expand ="block" (click) = "generateQR()"  > Generate QR</ion-button>
+            <ion-button expand ="block" (click) = "myProfile()" > My Profile</ion-button>
+            <ion-button expand ="block"  > My QRs</ion-button>
     </ion-list>
-    <ion-button expand ="block"  (click) = "openScanner()"> Upload a photo</ion-button>
+
 </ion-content>
