--- a/MyQR/src/app/tab2/tab2.page.html
+++ b/MyQR/src/app/tab2/tab2.page.html
@@ -1,22 +1,22 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Create new user!
+      Profile
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-card>
-      <ion-icon name="person-add" size="large" id= "user"></ion-icon>
-    <ion-item>
-      <ion-input [(ngModel)]="uname" placeholder= "Enter your username "></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-input [(ngModel)]="password" placeholder= "Enter your password " type="password"></ion-input>
-    </ion-item>
-  <ion-button (click)= "saveData()" expand= "block">Save</ion-button>
-  <ion-button (click)= "loadData()" expand= "block">Load</ion-button>
+      <ion-card-header>
+          <ion-card-subtitle>{{(currentUser)?currentUser.name+' '+currentUser.lastname:''}}</ion-card-subtitle>
+          <ion-card-title>{{(currentUser)?currentUser.username:''}}</ion-card-title>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Keep close to Nature's heart... and break clear away, once in awhile,
+          and climb a mountain or spend a week in the woods. Wash your spirit clean.
+        </ion-card-content>
 
 </ion-card>
 
