--- a/MyQR/src/app/tab1/tab1.page.scss
+++ b/MyQR/src/app/tab1/tab1.page.scss
@@ -2,3 +2,27 @@
   max-height: 35vh;
   overflow: hidden;
 }
+.background{
+  --background: none;
+  background-image: url('../../assets/img/img2.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+}
+#card{
+  padding-top: 30%;
+}
+#title{
+  
+  margin:auto;
+  text-align: center;
+  flex:1;
+}
+#button{  
+  position: absolute;
+  top:50%;
+  right: 0;
+  transform: translateY(-50%);
+  
+}
