set and get scanned and generated qr data and redirected to qr's data by it's type

--- a/MyQR/src/app/tab1/tab1.page.html
+++ b/MyQR/src/app/tab1/tab1.page.html
@@ -9,6 +9,7 @@
 </ion-header>
 
 <ion-content class="background">
+    <img src="../../assets/img/qrIcon.png" alt="QR Logo" id="img-qr"/> 
     <div id="card">
   <ion-card  color="none">
          
