torch and camera flip buttons are added on QR scanner screen

--- a/MyQR/src/app/login/login.page.html
+++ b/MyQR/src/app/login/login.page.html
@@ -12,7 +12,7 @@
           <div id="login">
     <ion-card >
         
-      <ion-item>
+      <ion-item id= "item">
         <ion-input [(ngModel)]="uname" placeholder= "Enter your username "></ion-input>
       </ion-item>
       <ion-item>
