--- a/MyQR/src/app/tab1/tab1.page.scss
+++ b/MyQR/src/app/tab1/tab1.page.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
 }
 #img-qr{
-    padding-top: 20px;
+    padding-top: 10px;
     width:250px;
     display: block;
     margin-left: auto;
@@ -29,4 +29,7 @@
   right: 0;
   transform: translateY(-50%);
   
+}
+#card {
+padding-bottom: 100px;
 }
