comments are added, My QRs page opens and facebook redirection is done.

--- a/MyQR/src/app/tab3/tab3.page.html
+++ b/MyQR/src/app/tab3/tab3.page.html
@@ -11,14 +11,14 @@
   <ion-card color="dark">
     <ion-card-header>
       Scanned QRs: 
-        <ion-card-title>{{barcodes.currentScanned}}</ion-card-title>
+        <ion-card-title>{{qrType}},{{qrText}}</ion-card-title>
       </ion-card-header>
 
 </ion-card >
 <ion-card color="dark">
   <ion-card-header>
     Generated QRs: 
-      <ion-card-title>{{barcodes.currentGenerate}}</ion-card-title>
+      <ion-card-title></ion-card-title>
     </ion-card-header>
 
 </ion-card >
