--- a/MyQR/src/app/tab1/tab1.page.html
+++ b/MyQR/src/app/tab1/tab1.page.html
@@ -15,7 +15,7 @@
             <ion-button expand ="block"  (click) = "openScanner()" color="dark"> Read QR</ion-button>
             <ion-button expand ="block" (click) = "generateQR()"  color="dark" > Generate QR</ion-button>
             <ion-button expand ="block" (click) = "myProfile()" color="dark"> My Profile</ion-button>
-            <ion-button expand ="block"  color="dark" (click)= "myQRs()"> My QRs</ion-button>  
+            <ion-button expand ="block" (click)= "myQRs()" color="dark"> My QRs</ion-button>  
   </ion-card>
 </div>
 </ion-content>
